# mathphysics

./: .gitignore  AG_sage.ipynb  ConformalFieldTheory.ipynb  ConicSections.ipynb  HermitianMatrices.ipynb  LICENSE  README.md  RESEARCH-PLAN.md  SpecialRelativity.ipynb  TASKS.md
Cadabra2/Srednicki/: Srednicki_Companion_Full.tex  parse_equations.py
Cadabra2/Srednicki/individual_chapters/: ch34_left_right_spinors.tex  ch35_sigma_algebra.py  ch35_sigma_algebra.tex  ch36_export_latex.py  ch38_export_latex.py  (+12 more)
Cadabra2/qft-dashboard/: package-lock.json  package.json
Cadabra2/spinors/: 02_sigma_matrices.py  03_spinor_helicity.py  04_mhv_amplitudes.py
CppMath/: gcd-iter.cpp  gcd-prob.cpp  gcd-prob2.cpp  gcd-recursive.cpp  gcd-tester.cpp  gcd-tester2.cpp  gcd.cpp  gcd.h  gcd_extended.cpp
CppMath/Fields/: factor.h  gcd-tested.cpp  gcd.cpp  gcd.h
CppMath/Groups/: AbelianGroup.h  Group.h  Integers.h  Integers_main.cpp
CppMath/Rings/: CommutativeRing.h  Field.h  RR.h  RR_main.cpp  Ring.h
Cyclonus/: README.md  conftest.py  requirements.txt
Cyclonus/Cyclonus/: requirements.txt
Cyclonus/Notebooks/: ProtobufTutorial.ipynb  SymPyNotes.ipynb
Cyclonus/Source/: CMakeLists.txt
Cyclonus/Source/ProtoFiles/: CMakeLists.txt
Cyclonus/Source/UnitTests/: CMakeLists.txt
Cyclonus/Source/UnitTests/MessagePack/: Tutorial_tests.cpp
Cyclonus/Source/UnitTests/ProtoFiles/PhysicalConstants/: Fundamental_tests.cpp
Cyclonus/unit_tests/: run_all_pytests.sh
LaTeX_and_pdfs/: AGAT_dump.tex  Analysis.tex  Apostol_Quick_Notes.tex  Apostol_Solutions_Vol2.tex  Cox_Ideals_notes.tex  Cox_UsingAG_poznamky.tex  DGDT_dump.tex  EM_dump.tex  Georgi_Waves.tex  Kittel_Kroemer_Thermal_Physics.tex  Nakahara_GTP-solutions.tex  Prob1_4_altitude_angle_of_sun.dia  Solutions_to_Apostol.tex  Srednicki_QFT.tex  ThePhysicsOfInterstellar.tex  ThePhysicsOfInterstellar_slides.tex  Wave_Physics_Notes.tex  Wave_Physics_Problems.tex
LaTeX_and_pdfs/the geometry of physics problems/: 01ManifoldsVector.tex  02tensors.tex  02tensors2.tex  03integration.tex  04liederivative.tex  05potentials.tex  06Holonomic.tex  07r3minkowski.tex  09covariantdifferentiation.tex  15liegroups.tex  16vectorbundles.tex  17fiberbundles.tex  18ConnectionsandAssociatedBundles.tex  19TheDiracEquation.tex  20YangMillsFields.tex  customstuff.tex  head.tex  tgpfix.tex  the geometry of physics problems.tex
LeeJM/: 01smoothmanifolds.tex  02smoothmaps.tex  03tangentvectors.tex  04submersionsimmersionsembeddings.tex  05submanifolds.tex  07LieGroups.tex  08VectorFields.tex  09IntegralCurvesandFlows.tex  12tensors.tex  13riemannianmetrics.tex  14differentialforms.tex  15orientations.tex  16integrationonmanifolds.tex  19DistributionsaFoliations.tex  20ExponentialMap.tex  22SymplecticManifolds.tex  AReviewofTopology.tex  BReviewofLinearAlgebra.tex  CReviewofCalculus.tex  LeeJM_IntroSmoothManifolds_sol.tex
Manifolds/: requirements.txt
Manifolds/Source/: CMakeLists.txt
Manifolds/Source/Algebra/: CMakeLists.txt  Main.cpp
Manifolds/Source/Algebra/Categories/: Category.h  Functor.h
Manifolds/Source/Algebra/Categories/FiniteCategories/: 1.h
Manifolds/Source/Algebra/Groups/: AbelianGroup.h  AdditiveIntegers.h  Group.h
Manifolds/Source/Algebra/Rings/: Field.h  Matrices2x2.h  Ring.h
Manifolds/Source/Algebra/SemiGroups/: Monoid.h  SemiGroup.h
Manifolds/Source/CRTP/Categories/Sets/: PosetElement.h
Manifolds/Source/CRTP/Vectors/: Euclidean3Vector.h  EuclideanVector.h  Vector.h
Manifolds/Source/UnitTests/: CMakeLists.txt  Main.cpp
Manifolds/Source/UnitTests/Algebra/Categories/: Functor_tests.cpp
Manifolds/Source/UnitTests/Algebra/Categories/FiniteCategories/: 1_tests.cpp
Manifolds/Source/UnitTests/Algebra/Groups/: AdditiveIntegers_tests.cpp  ModuloArithmetic_tests.cpp
Manifolds/Source/UnitTests/Algebra/Rings/: Rings_tests.cpp
Manifolds/Source/UnitTests/CRTP/Categories/Sets/: PosetElement_tests.cpp
Manifolds/Source/UnitTests/CRTP/Vectors/: Euclidean3Vector_tests.cpp
Manifolds/Source/Utilities/: SuperBitSet.h
agent/: README.md  SOUL.md  TOOLS.md
amplitudes/: 00-preamble.tex  01-qft-review.tex  02-helicity.tex  03-spinor-helicity.tex  04-mhv.tex  05-bcfw.tex  06-tools.tex  07-open-directions.tex  08-literature-review.tex  09-dixon-srednicki-bridge.tex  99-master.tex  DISCOVERY-PLAN.md  READING-LIST.md  STUDY-GUIDE.md  TALK.md  TASK-dixon-srednicki-bridge.md  TASKS.md
amplitudes/MHVamplitudes/: TESTING.md  pyproject.toml
amplitudes/MHVamplitudes/src/mhvamplitudes/amplitudes/: berends_giele.py  smga.py
amplitudes/MHVamplitudes/src/mhvamplitudes/kinematics/: phase_space.py  spinor_helicity.py
amplitudes/MHVamplitudes/src/mhvamplitudes/spinors/: GammaMatrices.py  LeftWeylGenerators.py  LorentzMetric.py  SigmaMatrices.py  __init__.py  invariants.py  pauli_matrices.py  representations.py
amplitudes/MHVamplitudes/src/mhvamplitudes/spinors/cadabra2/: __init__.py  declarations.py
amplitudes/MHVamplitudes/tests/: conftest.py
amplitudes/MHVamplitudes/tests/integration_tests/: test_smga_reproduction.py
amplitudes/MHVamplitudes/tests/unit_tests/amplitudes/: test_berends_giele.py  test_smga.py
amplitudes/MHVamplitudes/tests/unit_tests/kinematics/: test_phase_space.py  test_spinor_helicity.py
amplitudes/MHVamplitudes/tests/unit_tests/spinors/: test_LeftWeylGenerators.py  test_invariants.py  test_massless_spinors.py
amplitudes/Srednicki/: AGENTS.md  MHV_research_survey.md  PROGRESS.md  README.md  Srednicki_Companion_Full.tex  export_dashboard_json.py  make_clean_chapters.py  parsed_results.json  pol_fix_patch.py
amplitudes/scripts/: 01_color_fierz_identity.py  02_spinor_construction.py  03_spinor_product_identities.py  04_four_point_amplitude.py  05_polarization_vectors.py  06_parke_taylor_mhv.py  07_soft_gluon_limit.py  08_smga_stripped_amplitudes.py
amplitudes/spinors/: 01_weyl_spinors.py  05_fierz_identities.py  README.md  REFERENCES.md
notebooks/: sagemath_guide.ipynb  sympy_guide.ipynb
playground/: GR.ipynb  HotTakesScript.md  SageManifoldsTutorial.ipynb  SageManifoldsTutorial.py  TemporarilyAddSageDirectory.sh
(+73 files in other folders)
