CMAKE_MINIMUM_REQUIRED(VERSION 3.7)

PROJECT(SystemProgramming LANGUAGES CXX)

INCLUDE_DIRECTORIES(BEFORE ${CMAKE_SOURCE_DIR})

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/../CMake) 

SET(CMAKE_CXX_STANDARD_17)
# Require the required C++ standard from the compiler.
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(BOOST_MIN_VERSION "1.61.0")

IF (ALLOW_NEWER_BOOST)
  FIND_PACKAGE(Boost ${BOOST_MIN_VERSION} REQUIRED)
ELSE()
  FIND_PACKAGE(Boost)
ENDIF()

INCLUDE_DIRECTORIES(SYSTEM ${Boost_INCLUDE_DIRS})

# Add Projects

ADD_SUBDIRECTORY(UnitTests)
