[project]
name = "mhvamplitudes"
version = "0.1.0"
description = ""
authors = [
    {name = "Ernest Yeung",email = "ernestyalumni@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "mhvamplitudes", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
