INCLUDE(GNUInstallDirs)

ADD_LIBRARY(AlgebraLib SHARED
  Main.cpp)

# CMake Error at Algebra/CMakeLists.txt:4 (SET_TARGET_PROPERTIES):
#  SET_TARGET_PROPERTIES called with incorrect number of arguments.
# SET_TARGET_PROPERTIES(AlgebraLib PROPERTIES VERSION ${PROJECT_VERSION})

SET_TARGET_PROPERTIES(AlgebraLib PROPERTIES SOVERSION 1)

TARGET_INCLUDE_DIRECTORIES(AlgebraLib PRIVATE .)

INSTALL(TARGETS AlgebraLib
  LIBRARY DESTINATION "${CMAKE_BINARY_DIR}/"
  PUBLIC_HEADER DESTINATION ${CMAKE_BINARY_DIR}/inc)



